Adjust the media query size from 768 to 780 to ensure enough space for a non-collapsed header-correct

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,7 +213,7 @@ footer {
 
 
 /* Media query: tablets from 768px - changed to 770, since ipad mini has too less space for a not collapsed header..*/
-@media screen and (min-width: 770px) {
+@media screen and (min-width: 780px) {
     nav {
         display: flex;
         position: relative;
